--- a/src/components/SubHeading.astro
+++ b/src/components/SubHeading.astro
@@ -1,3 +1,5 @@
-<h4 class="text-base leading-4 mt-8 mb-6 text-primary-300 font-bold tracking-wide uppercase">
-  <slot></slot>
+<h4
+  class="text-base leading-4 text-primary-300 font-bold tracking-wide uppercase"
+>
+  <slot />
 </h4>
