--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -43,7 +43,7 @@ const { page } = Astro.props as Props;
         <a
           style={{ width: "24px", textAlign: "center" }}
           aria-label={`Go to page`}
-          href={`/${page.currentPage === 2 ? "" : pageIndex}`}
+          href={`/${pageIndex === 2 ? "" : pageIndex}`}
         >
           {pageIndex}
         </a>
