--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -34,7 +34,7 @@ const { count, posts } = Astro.props as {
     class="flex flex-col max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-8"
   >
     <div class="flex items-center">
-      <h2 class="flex my-0">{tag}</h2>
+      <h2 class="flex my-0 text-xl">{tag}</h2>
       <p class="flex ml-4 my-0">- {count} article{count !== 1 && "s"}</p>
     </div>
 
