cleanup about me

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -38,12 +38,16 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
           </em>
 
           <p class="text-base">
-            I'm a Senior Software Engineer at Rover.com
+            I'm a Senior Software Engineer at <a href="https://rover.com"
+              >Rover.com</a
+            >
 
             <strong class="block font-bold mt-4">Previous:</strong>
             <ul>
               <li>
-                Engineering Manager II @ Schweitzer Engineering Laboratories
+                Engineering Manager II @ <a href="https://selinc.com/"
+                  >Schweitzer Engineering Laboratories</a
+                >
               </li>
               <li>
                 <a
@@ -62,9 +66,6 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
               >Griffey
             </a>.
           </p>
-
-          <SubHeading>Stuff I use</SubHeading>
-          <a href="/about/uses">Click Here {"->"}</a>
 
           <div class="w-full mt-12">
             <SubHeading>Talks</SubHeading>
