--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -22,15 +22,11 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
             class="shadow rounded-md m-auto w-full aspect-auto"
           />
 
-          <figcaption class="text-sm mt-2">
-            That's me, the one in the middle!
-          </figcaption>
+          <figcaption class="text-sm mt-2">That's me, the one in the middle!</figcaption>
         </div>
 
         <section class="w-full md:w-1/2 mt-8 md:mt-0 ml-0 md:ml-12">
-          <SubHeading class="hidden md:block" style={{ marginTop: 0 }}>
-            About
-          </SubHeading>
+          <SubHeading class="hidden md:block" style={{ marginTop: 0 }}>About</SubHeading>
           <em
             class="text-3xl bg-clip-text text-transparent bg-gradient-to-tr from-blue-500 to-purple-800 dark:from-blue-100 dark:to-orange-300 font-bold"
           >
@@ -38,21 +34,15 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
           </em>
 
           <p class="text-base">
-            I'm a Senior Software Engineer at <a href="https://rover.com"
-              >Rover.com</a
-            >
+            I'm a Senior Software Engineer at <a href="https://rover.com">Rover.com</a>
 
             <strong class="block font-bold mt-4">Previous:</strong>
             <ul>
               <li>
-                Engineering Manager II @ <a href="https://selinc.com/"
-                  >Schweitzer Engineering Laboratories</a
-                >
+                Engineering Manager II @ <a href="https://selinc.com/">Schweitzer Engineering Laboratories</a>
               </li>
               <li>
-                <a
-                  href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
-                >
+                <a href="https://www.mobygames.com/developer/sheet/view/developerId,783203/">
                   Web developer @ Sony PlayStation
                 </a>
               </li>
@@ -61,37 +51,27 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
           </p>
 
           <p class="text-base mt-6">
-            I play drums in an ok emo/math rock band, <a
-              href="https://griffeymusic.bandcamp.com/"
-              >Griffey
-            </a>.
+            I play drums in an ok emo/math rock band, <a href="https://griffeymusic.bandcamp.com/">Griffey</a>.
           </p>
 
           <div class="w-full mt-12">
             <SubHeading>Talks</SubHeading>
             <ul class="list-disc list-inside ml-4">
               <li>
-                <a
-                  target="_blank"
-                  href="https://introduction-functional-programming-boise.netlify.com/#/"
+                <a target="_blank" href="https://introduction-functional-programming-boise.netlify.com/#/"
                   >Functional Programming Light (Boise Code Camp 2019)</a
                 >
               </li>
               <li>Making React Fast (Internal Presentation 2019)</li>
-              <li>
-                NPM, Dependencies, and JS Modules (Internal Presentation 2021)
-              </li>
+              <li>NPM, Dependencies, and JS Modules (Internal Presentation 2021)</li>
             </ul>
 
             <SubHeading class="my-0">Courses</SubHeading>
             <ul class="list-disc list-inside ml-4">
               <li class="list-none">
-                <a
-                  href="https://www.newline.co/courses/creating-react-libraries-from-scratch"
-                  class="block w-2/3"
-                >
+                <a href="https://www.newline.co/courses/creating-react-libraries-from-scratch" class="block w-2/3">
                   <Image
-                    src="/images/Course_Card_5_1.png"
+                    src="/images/create-react-libraries-card.png"
                     alt="Creating React Libraries from Scratch course"
                     class="rounded-md m-auto shadow hover:shadow-xl transition transform hover:scale-105 ease-in-out"
                     format="png"
