--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -46,12 +46,12 @@ import BaseLayout from "@layouts/BaseLayout.astro";
                   Web developer @ Sony PlayStation
                 </a>
               </li>
-              <li>Student web developer @ Eastern Washington University</li>
+              <li>Student web developer @ <a href="https://www.ewu.edu/">Eastern Washington University</a></li>
             </ul>
           </p>
 
           <p class="text-base mt-6">
-            I play drums in an ok emo/math rock band, <a href="https://griffeymusic.bandcamp.com/">Griffey</a>.
+            I play drums in a emo/math rock band, <a href="https://griffeymusic.bandcamp.com/">Griffey</a>.
           </p>
 
           <div class="w-full mt-12">
@@ -64,22 +64,6 @@ import BaseLayout from "@layouts/BaseLayout.astro";
               </li>
               <li>Making React Fast (Internal Presentation 2019)</li>
               <li>NPM, Dependencies, and JS Modules (Internal Presentation 2021)</li>
-            </ul>
-
-            <SubHeading class="my-0">Courses</SubHeading>
-            <ul class="list-disc list-inside ml-4">
-              <li class="list-none">
-                <a href="https://www.newline.co/courses/creating-react-libraries-from-scratch" class="block w-2/3">
-                  <Image
-                    src="/images/create-react-libraries-card.png"
-                    alt="Creating React Libraries from Scratch course"
-                    class="rounded-md m-auto shadow hover:shadow-xl transition transform hover:scale-105 ease-in-out"
-                    format="png"
-                    aspectRatio="5:3"
-                    height={200}
-                  />
-                </a>
-              </li>
             </ul>
           </div>
         </section>
