--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -1,8 +1,6 @@
 ---
-import { Image, Picture } from "@astrojs/image/components";
-import SubHeading from "@components/SubHeading.astro";
+import { Image } from "@astrojs/image/components";
 import BaseLayout from "@layouts/BaseLayout.astro";
-import { Icon } from "astro-icon";
 ---
 
 <BaseLayout title="Courses | Dylan Paulus" description="Courses I have created">
@@ -53,7 +51,20 @@ import { Icon } from "astro-icon";
           class="flex items-center px-6 py-4 mt-8 rounded-md bg-pink-500 text-white hover:text-white hover:bg-pink-600 transform-gpu hover:scale-105 transition-all"
           target="_blank"
           href="https://www.newline.co/courses/creating-react-libraries-from-scratch"
-          ><Icon name="external-link" width={20} class="inline mr-2" /> Go to Course</a
+          ><svg
+            height={20}
+            width={20}
+            class="inline mr-2"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+          >
+            <path
+              fill="currentColor"
+              d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
+            ></path>
+          </svg>Go to Course</a
         >
       </div>
     </div>
