--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,6 +1,5 @@
 ---
 import type { Page } from "astro";
-import { Icon } from "astro-icon";
 
 export type Props = {
   page: Page;
@@ -16,12 +15,9 @@ const { page } = Astro.props as Props;
     aria-disabled={!page.url.prev}
     class={`${!page.url.prev ? `opacity-50` : ``}`}
   >
-    <Icon
-      name="carbon:chevron-left"
-      style={{
-        width: "24px",
-      }}
-    />
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32"
+      ><path fill="currentColor" d="M10 16L20 6l1.4 1.4l-8.6 8.6l8.6 8.6L20 26z"></path></svg
+    >
   </a>
 
   {
@@ -30,10 +26,7 @@ const { page } = Astro.props as Props;
 
       if (pageIndex == page.currentPage) {
         return (
-          <strong
-            class="font-bold"
-            style={{ width: "24px", textAlign: "center" }}
-          >
+          <strong class="font-bold" style={{ width: "24px", textAlign: "center" }}>
             {pageIndex}
           </strong>
         );
@@ -57,11 +50,8 @@ const { page } = Astro.props as Props;
     aria-disabled={!page.url.next}
     class={`${!page.url.next ? `opacity-50` : ``}`}
   >
-    <Icon
-      name="carbon:chevron-right"
-      style={{
-        width: "24px",
-      }}
-    />
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32" class="transform rotate-180"
+      ><path fill="currentColor" d="M10 16L20 6l1.4 1.4l-8.6 8.6l8.6 8.6L20 26z"></path></svg
+    >
   </a>
 </div>
