--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -9,8 +9,8 @@ import BaseLayout from "@layouts/BaseLayout.astro";
     tab-index="-1"
     class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12"
   >
-    <div class="flex flex-col md:flex-row w-full">
-      <div class="w-1/2 md:w-full">
+    <div class="flex flex-col lg:flex-row w-full">
+      <div class="w-full lg:w-1/2">
         <Image
           src="/images/create-react-libraries-card.png"
           alt="Creating React Libraries from Scratch course"
@@ -22,7 +22,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
         />
       </div>
 
-      <div class="w-1/2 md:w-full justify-between flex flex-col">
+      <div class="mt-6 lg:mt-5 w-full lg:w-1/2 justify-between flex flex-col">
         <div>
           <h3 class="m-0">Creating React Libraries from Scratch</h3>
 
