--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -16,9 +16,9 @@ const { post } = Astro.props as {
   post: CollectionEntry<"post">;
 };
 
-const { Content } = await post.render();
+const { Content, remarkPluginFrontmatter } = await post.render();
 ---
 
-<BlogPost frontmatter={post.data}>
+<BlogPost frontmatter={{ ...post.data, ...remarkPluginFrontmatter }}>
   <Content />
 </BlogPost>
