--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -22,7 +22,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
         />
       </div>
 
-      <div class="mt-6 lg:mt-5 w-full lg:w-1/2 justify-between flex flex-col">
+      <div class="mt-6 lg:mt-0 w-full md:ml-2 lg:w-1/2 justify-between flex flex-col">
         <div>
           <h3 class="m-0">Creating React Libraries from Scratch</h3>
 
