--- a/src/components/MenuLink.astro
+++ b/src/components/MenuLink.astro
@@ -8,7 +8,7 @@ const { href } = Astro.props as Props;
 
 <a
   href={href}
-  class="rounded text-white no-underline font-bold text-2xl mr-4 p-4 transition-colors hover:bg-gray-800 hover:text-white text-opacity-75"
+  class="rounded text-black dark:text-white no-underline font-bold text-xl mr-4 p-4 transition-colors hover:bg-gray-800 hover:text-white text-opacity-90"
 >
   <slot />
 </a>
