--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ const { title, description } = Astro.props as Props;
   <body>
     <Header />
 
-    <main class="p-4 sm:p-0 w-full text-base -mt-28">
+    <main class="p-4 sm:p-0 w-full text-base">
       <slot />
     </main>
 
