fix: website cleanup

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -8,8 +8,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
   <section
     id="main-content"
     tab-index="-1"
-    class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-8"
-  >
+    class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-8">
     <div class="flex flex-col gap-4 leading-loose">
       <div class="flex flex-col md:flex-row w-full">
         <div class="text-center w-full md:w-1/2">
@@ -22,43 +21,65 @@ import BaseLayout from "@layouts/BaseLayout.astro";
             class="shadow-lg rounded-md m-auto w-full aspect-auto"
           />
 
-          <figcaption class="text-sm mt-2">That's me, the one on the drums!</figcaption>
+          <figcaption class="text-sm mt-2">
+            That's me, the one on the drums!
+          </figcaption>
         </div>
 
         <section class="w-full md:w-1/2 mt-8 md:mt-0 ml-0 md:ml-12">
-          <SubHeading class="hidden md:block" style={{ marginTop: 0 }}>About</SubHeading>
+          <SubHeading class="hidden md:block" style={{ marginTop: 0 }}>
+            About
+          </SubHeading>
           <em
-            class="text-3xl bg-clip-text text-transparent bg-gradient-to-tr from-blue-500 to-purple-800 dark:from-blue-100 dark:to-orange-300 font-bold"
-          >
+            class="text-3xl bg-clip-text text-transparent bg-gradient-to-tr from-blue-500 to-purple-800 dark:from-blue-100 dark:to-orange-300 font-bold">
             Hi, I'm Dylan.
           </em>
 
           <p class="text-base">
-            I'm a Senior Software Engineer at <a href="https://rover.com">Rover.com</a>
+            I'm a Senior Software Engineer at <a href="https://rover.com"
+              >Rover.com</a
+            >
           </p>
           <p class="text-base mt-6">
-            I play drums in a emo/math rock band, <a href="https://griffeymusic.bandcamp.com/">Griffey</a>.
+            I play drums in a emo/math rock band, <a
+              href="https://griffeymusic.bandcamp.com/">Griffey</a
+            >.
           </p>
 
           <strong class="block font-bold mt-4 mb-0">Previous:</strong>
           <ul class="m-0">
-            <li>Engineering Manager II @ <a href="https://selinc.com/">Schweitzer Engineering Laboratories</a></li>
             <li>
-              <a href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
+              Engineering Manager II @ <a href="https://selinc.com/"
+                >Schweitzer Engineering Laboratories</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
                 >Web developer @ Sony PlayStation
               </a>
             </li>
-            <li>Student web developer @ <a href="https://www.ewu.edu/">Eastern Washington University</a></li>
+            <li>
+              Student web developer @ <a href="https://www.ewu.edu/"
+                >Eastern Washington University</a
+              >
+            </li>
           </ul>
 
           <div class="w-full mt-12">
             <SubHeading>Talks</SubHeading>
             <ul class="list-disc list-inside ml-4">
-              <li>Developing Software at SEL (Presentation for EWU students 2022)</li>
-              <li>NPM, Dependencies, and JS Modules (Internal Presentation 2021)</li>
+              <li>
+                Developing Software at SEL (Presentation for EWU students 2022)
+              </li>
+              <li>
+                NPM, Dependencies, and JS Modules (Internal Presentation 2021)
+              </li>
               <li>Making React Fast (Internal Presentation 2019)</li>
               <li>
-                <a target="_blank" href="https://introduction-functional-programming-boise.netlify.com/#/"
+                <a
+                  target="_blank"
+                  href="https://introduction-functional-programming-boise.netlify.com/#/"
                   >Functional Programming Light (Boise Code Camp 2019)</a
                 >
               </li>
