--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -7,8 +7,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
   <section
     id="main-content"
     tab-index="-1"
-    class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12"
-  >
+    class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-12">
     <div class="flex flex-col lg:flex-row w-full">
       <div class="w-full lg:w-1/2">
         <Image
@@ -22,18 +21,23 @@ import BaseLayout from "@layouts/BaseLayout.astro";
         />
       </div>
 
-      <div class="mt-6 lg:mt-0 w-full md:ml-2 lg:w-1/2 justify-between flex flex-col">
+      <div
+        class="mt-6 lg:mt-0 w-full md:ml-2 lg:w-1/2 justify-between flex flex-col">
         <div>
           <h3 class="m-0">Creating React Libraries from Scratch</h3>
 
           <p class="mt-4">
-            Building a library is so much more than just the code. We need to know the ins and outs of versioning,
-            deploying, building, documenting, dependency management, module types, tooling, and more. This is a daunting
-            task for just one tutorial to cover. Creating React Libraries from Scratch will teach you everything you
-            need to know to succeed in creating a library.
+            Building a library is so much more than just the code. We need to
+            know the ins and outs of versioning, deploying, building,
+            documenting, dependency management, module types, tooling, and more.
+            This is a daunting task for just one tutorial to cover. Creating
+            React Libraries from Scratch will teach you everything you need to
+            know to succeed in creating a library.
           </p>
 
-          <strong class="font-bold">Creating React Libraries from Scratch covers:</strong>
+          <strong class="font-bold"
+            >Creating React Libraries from Scratch covers:</strong
+          >
           <ul>
             <li>initializing a new npm package</li>
             <li>maintaining code quality</li>
@@ -58,8 +62,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
-            viewBox="0 0 24 24"
-          >
+            viewBox="0 0 24 24">
             <path
               fill="currentColor"
               d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
