--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,25 +7,18 @@ import BaseLayout from "@layouts/BaseLayout.astro";
   <section
     id="main-content"
     tab-index="-1"
-    class="flex flex-col items-center justify-center max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto mt-8"
-  >
-    <div class="flex flex-col lg:flex-row w-full mb-16">
-      <Picture
-        src="/images/boise-code-camp.jpeg"
-        widths={[200, 400, 800]}
-        aspectRatio="4:3"
-        sizes="(max-width: 800px) 100vw, 600px"
-        alt="Image of Dylan playing drums"
-        class="shadow-lg rounded-md m-auto w-full aspect-auto"
-      />
+    class="flex flex-col items-center justify-center max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto">
+    <div class="flex flex-col md:flex-row justify-between w-full mb-16">
+      <div class="flex flex-col w-full lg:w-1/2">
+        <h2 class="m-0">Hi, I'm Dylan Paulus.</h2>
+        <p class="text-xl opacity-90 m-0 mt-1">
+          Full-Stack Software Engineer / Engineering Manager
+        </p>
 
-      <div class="flex flex-col lg:ml-14 lg:mt-0 mt-8">
-        <h2 class="m-0">Hi, I'm Dylan Paulus. 👋</h2>
-        <p class="text-xl opacity-90 m-0 mt-1">Full-Stack Software Engineer / Engineering Manager</p>
-
-        <p class="mt-6 opacity-80 max-w-2xl break-keep">
-          I have been building highly performant software and engineering teams for close to a decade. Currently, I'm
-          focused on writing code that lets everyone experience the unconditional love of a pet at <a
+        <p class="mt-6 opacity-80 max-w-2xl break-keep text-lg">
+          I have been building highly performant software and engineering teams
+          for close to a decade. Currently, I'm focused on writing code that
+          lets everyone experience the unconditional love of a pet at <a
             href="https://www.rover.com/"
             target="_blank"
             ><svg
@@ -35,8 +28,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
               xmlns="http://www.w3.org/2000/svg"
               width="28"
               height="28"
-              viewBox="0 0 28 28"
-            >
+              viewBox="0 0 28 28">
               <path
                 fill="currentColor"
                 d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
@@ -46,9 +38,21 @@ import BaseLayout from "@layouts/BaseLayout.astro";
         </p>
 
         <a
+          href="/about"
           class="flex items-center px-6 py-4 mt-8 rounded-md dark:bg-[#ff99c7] dark:hover:bg-[#ffcce3] bg-[#5755c9] hover:bg-[#1e1c63] text-white hover:text-white dark:text-black transform-gpu hover:scale-105 transition-all"
-          href="/about">Learn more about me</a
+          >Learn more about me</a
         >
+      </div>
+
+      <div class="max-w-md md:max-w-sm lg:max-w-md hidden lg:block lg:w-1/2">
+        <Picture
+          src="/images/boise-code-camp.jpeg"
+          widths={[200, 400, 800]}
+          aspectRatio="4:3"
+          sizes="(max-width: 800px) 100vw, 800px"
+          alt="Image of Dylan playing drums"
+          class="shadow-lg rounded-md"
+        />
       </div>
     </div>
   </section>
